force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <description>Primary zoo membership record. Loyalty Program Member is related when the member participates in loyalty.</description>
    <label>Member</label>
    <nameField>
        <displayFormat>MBR-{0000}</displayFormat>
        <label>Membership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>