force-app/main/default/objects/Membership__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Current</fullName><default>true</default><label>Current</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value>
            <value><fullName>Waived</fullName><default>false</default><label>Waived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>