force-app/main/default/objects/Membership__c/fields/Loyalty_Program_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Program Member</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>