force-app/main/default/objects/Membership__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Grace Period</fullName><default>false</default><label>Grace Period</label></value>
            <value><fullName>Lapsed</fullName><default>false</default><label>Lapsed</label></value>
            <value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>