force-app/main/default/objects/Membership__c/fields/Membership_Tier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Tier__c</fullName>
    <label>Membership Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>