force-app/main/default/objects/Membership__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Individual</fullName><default>false</default><label>Individual</label></value>
            <value><fullName>Household</fullName><default>false</default><label>Household</label></value>
            <value><fullName>Corporate</fullName><default>false</default><label>Corporate</label></value>
            <value><fullName>Student</fullName><default>false</default><label>Student</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>