force-app/main/default/objects/Membership__c/fields/Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Price_Paid__c</fullName>
    <label>Price Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>