force-app/main/default/objects/Membership__c/listViews/All_Members.listView-meta.xml
<ListView>
    <fullName>All_Members</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Membership_Type__c</columns>
    <columns>Membership_Tier__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Billing_Status__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Members</label>
</ListView>