force-app/main/default/objects/Membership__c/listViews/Members_Requiring_Attention.listView-meta.xml
<ListView>
    <fullName>Members_Requiring_Attention</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Membership_Tier__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Billing_Status__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <filters>
        <field>Membership_Status__c</field>
        <operation>equals</operation>
        <value>Grace Period,Lapsed,Suspended</value>
    </filters>
    <filters>
        <field>Billing_Status__c</field>
        <operation>equals</operation>
        <value>Failed,Overdue</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Members Requiring Attention</label>
</ListView>